--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
   "license": "MIT",
   "scripts": {
     "start": "nodemon app.js",
-    "debug": "nodemon --inspect app.js"
+    "debug": "nodemon --inspect app.js",
+    "db:drop": "dropdb -e ned",
+    "db:create": "createdb -e ned",
+    "db:reset": "yarn db:drop && yarn db:create",
+    "db:migrate": "node db/migrate.js",
+    "db:seed": "node db/seed.js"
   },
   "dependencies": {
     "body-parser": "^1.17.1",
@@ -15,7 +20,9 @@
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
-    "morgan": "^1.8.1"
+    "faker": "^4.1.0",
+    "morgan": "^1.8.1",
+    "pg-promise": "^5.6.4"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
